# tabular-fabric-infer

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
batchinfer/: Cargo.toml
batchinfer/examples/: model_infer.rs
batchinfer/src/: base.rs  errors.rs  lib.rs  mistral.rs
tabular-candle-cascade-atten/: Cargo.toml  build.rs
tabular-candle-cascade-attn/: Cargo.toml  README.md  build.rs  env.sh
tabular-candle-cascade-attn/examples/: example.rs
tabular-candle-cascade-attn/kernels/candle/: flashinfer_candle_op.cc  flashinfer_candle_op.h
tabular-candle-cascade-attn/kernels/flashinfer/: csrc  include
tabular-candle-cascade-attn/src/: ffi.rs  lib.rs
tabular-candle-cascade-attn/tests/: cascade_attn_tests.rs  flash_attn_tests.rs
tabular-fabric-batch-infer/: Cargo.toml
tabular-fabric-batch-infer/examples/: ggml_model_infer.rs  llama_model_infer.rs  mistral_model_infer.rs  phi_model_infer.rs  qwen_model_infer.rs
tabular-fabric-batch-infer/src/: base.rs  errors.rs  lib.rs
tabular-fabric-batch-infer/src/infer/: candle_gen.rs  constants.rs  mod.rs
tabular-fabric-batch-infer/src/infer/models/: llama.rs  mistral.rs  mod.rs  phi.rs  qwen.rs
tabular-fabric-batch-infer/src/infer/utils/: token_output_stream.rs
tabular-fabric-batch-infer/src/models/: candle_gen.rs  ggml.rs  llama.rs  mistral.rs  mod.rs  phi.rs  phi1.rs  qwen.rs
tabular-fabric-batch-infer/src/models/utils/: mod.rs
tabular-fabric-batch-infer/src/server/: main.rs  server.rs  trace.rs
tabular-fabric-cascade-infer/: Cargo.toml
tabular-fabric-cascade-infer/examples/: mistral_model_infer.rs  model_infer.rs  qwen_model_infer.rs
tabular-fabric-cascade-infer/src/: base.rs  errors.rs  mistral.rs  token_output_stream.rs
tabular-fabric-cascade-infer/src/models/: mistral.rs  mod.rs  phi.rs  qwen.rs
tabular-fabric-cascade-infer/src/utils/: mod.rs  token_output_stream.rs
