

[workspace]
members = [
    "tabular-fabric-batch-infer",
]
exclude = [
]

[workspace.dependencies]
parquet = "40.0.0"
arrow = { version = "40.0.0", features = ["ffi"] }
arrow-schema = "40.0.0"
arrow-cast = "40.0.0"
arrow-csv = "40.0.0"
arrow-flight = "40.0.0"
datafusion = "26.0.0"
datafusion-common = "26.0.0"
datafusion-expr = "26.0.0"
datafusion-sql = "26.0.0"
datafusion-optimizer = "26.0.0"
datafusion-substrait = "26.0.0"

arrow2 = "0.17.0"
prost = "0.11.8"
tonic = { version = "0.9.2", features = ["tls-roots"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.66"
log = "0.4"
envconfig = "0.10.0"
dotenv_config = "0.1.6"
tantivy = "0.19.2"
tempfile = "3.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
md5 = "0.7.0"
pbjson-types = "0.5.1"
serde = "1.0.155"
prost-helper = "0.3.0"
serde_json = "1.0.94"
tonic-reflection = "0.9.2"
tonic-web = "0.9.2"
string-join = "0.1.2"
sql-builder = "3.1.1"
aws-types = "0.55.0"
aws-sdk-s3 = "0.25.1"
http = "0.2.6"
url = "2.2.2"
urlencoding = "2.1.2"
object_store = { version = "0.5.4", features = ["aws"] }
opendal = "0.30.5"
futures = { version = "0.3", features = ["alloc"] }
futures-util = "0.3.28"
bytes = "1.4.0"
num = "0.4.0"
num-traits = "0.2.15"
async-std = { version = "1.12.0" }
rust_decimal = "1.29.1"
chrono = "0.4.24"
chrono-tz = "0.8.2"
wasmtime = "9.0.2"
wasmtime-wasi = "9.0.2"
anyhow = "1.0.71"
redis = "0.23.0"
base64 = "0.21.2"
thiserror = "1.0.50"
tokio-util = "0.7.8"
ctrlc = "3.2.3"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
pest = "2.6"
pest_derive = "2.6"
petgraph = "0.6.3"
itertools = "0.11.0"
dotenvy = "0.15.7"
object-pool = "0.5.4"
xmlparser = "0.13.5"
regex = "1.10.2"
lazy_static = "1.4.0"
rayon = "1.8.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
blake2 = "0.10.6"
once_cell = "1.18.0"
mockall = "0.10.2"
bigdecimal = "0.2.0"
libc = "0.2.119"
num-bigint = "0.3"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
hyper = "0.14.10"


criterion = "0.4"
test-log = "0.2.10"
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }


