

[workspace]
members = [
    "tabular-fabric-batch-infer",
]
exclude = [
]

[workspace.dependencies]
parquet = { git = "ssh://git@git.basebit.me/daas/arrow-rs.git", tag = "51.0.0"}
arrow = { git = "ssh://git@git.basebit.me/daas/arrow-rs.git", tag = "51.0.0", features = ["ffi"] }

tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
serde = "1.0.155"
serde_json = "1.0.94"
anyhow = "1.0.71"
itertools = "0.11.0"
structmap = { version = "0.1.6" }
structmap-derive = { version = "0.1.6" }

[feature]
cuda = ["tabular-fabric-batch-infer/cuda"]
