[package]
name = "batchinfer"
version = "0.1.0"
edition = "2021"

[lib]
name ="batchinfer"
path = "src/lib.rs"
test = false
bench = false

[dependencies]

tokio = { workspace = true }
arrow = { workspace = true }
thiserror = { version = "1.0.50" }
anyhow = { workspace = true }
itertools = { workspace = true}

candle-core = {  path = "/Users/elans2/workspace/basebit/tabular-space/candle/candle-core", features = ["default"] }
candle-transformers = {  path = "/Users/elans2/workspace/basebit/tabular-space/candle/candle-transformers", features = ["default"] }
candle-nn = {  path = "/Users/elans2/workspace/basebit/tabular-space/candle/candle-nn", features = ["default"] }
tokenizers = { version = "0.13.3" }
