[package]
name = "tabular-fabric-batch-infer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabular_fabric_batch_infer"
path = "src/lib.rs"
test = false
bench = false

[dependencies]

tokio = { workspace = true }
thiserror = { version = "1.0.50" }
anyhow = { workspace = true }
itertools = { workspace = true }
structmap = { workspace = true }
structmap-derive = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

candle-core = { git = "https://github.com/huggingface/candle.git", tag = "0.5.1", features = ["default"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", tag = "0.5.1", features = ["default"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", tag = "0.5.1", features = ["default"] }
tokenizers = { version = "0.19.1" }

log = "0.4.20"
encoding_rs = "0.8.33"


[features]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-transformers/metal", "candle-nn/metal"]
