[package]
name = "tabular-fabric-cascade-infer"
version = "0.1.0"
edition = "2021"

[lib]
name ="tabular_fabric_cascade_infer"
path = "src/lib.rs"
test = false
bench = false

[dependencies]

tokio = { workspace = true }
arrow = { workspace = true }
thiserror = { version = "1.0.50" }
anyhow = { workspace = true }
itertools = { workspace = true}

candle-core = {  version = "0.4.1", features = ["default"] }
candle-transformers = {  version = "0.4.1", features = ["default"] }
candle-nn = {  version = "0.4.1", features = ["default"] }
tokenizers = { version = "0.13.3" }
serde_json = "1.0.114"

structmap = { version = "0.1.6" }
structmap-derive = { version = "0.1.6" }


[features]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-transformers/metal", "candle-nn/metal"]
